# s1-port

./: .gitignore  .gitmodules  Cargo.toml  encodemovie.sh  readme.md  sonic.map
.cargo/: config.toml
asmconverter/: Cargo.toml
asmconverter/src/: main.rs
mdcomp/: Cargo.toml
mdcomp/src/: kosinski.rs  lib.rs  nemesis.rs
smps/: Cargo.toml  build.rs
smps/src/: dacdriver.rs  driver.c  driver.h  driver.rs  lib.rs  opcodes.c  system.c  system.h  vgm_ffi.rs
sonic1/: Cargo.toml  build.rs
sonic1/src/: game_sprite.rs  lib.rs  main.rs  periodic_timer.rs  plane_texture.rs  renderer.rs
sonic1/src/shaders/: plane-blur.frag  plane-normal.frag  screen-normal.frag  screen-ntsc.frag
sonic1c/: anim.c  anim.h  build_game.cmd  build_game_release.cmd  continue.c  continue.h  credits.c  debug.c  ending.c  enigma.c  enigma.h  funcs.c  game.c  game.h  graphics.c  graphics.h  input.c  input.h  kosinski.c  level.c  level.h  math.c  nemesis.c  nemesis.h  object.h  opcodes.c  opcodes.h  palette.c  palette.h  plc.c  plc.h  ramlocs.c  ramlocs.h  romlocs.h  sega.c  sega.h  sound.c  sound.h  special.c  special.h  (+10 more)
sonic1c/objects/: animals.c  ballhog.c  ballhogball.c  batbrain.c  bom.c  bossghz.c  bridge.c  bubble.c  bumper.c  burrobot.c  button.c  buzzbomber.c  buzzmissledissolve.c  caterkiller.c  chopper.c  collapseledge.c  collision.c  common.c  continuegui.c  continuesonic.c  crabmeat.c  (+109 more)
speedshoes/: Cargo.toml
speedshoes-vdp-renderer/: Cargo.toml  build.rs
speedshoes/src/: gamesettings.rs  lib.rs  system.rs  vdp.rs
speedshoes/src/emu/: mod.rs
speedshoes/src/script/: mod.rs
(+10 files in other folders)
