[package]
name = "sonic1"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = "0.2.33"
glow = "0.14.2"
hound = "3.5.1"
image = "0.25.5"
imgui = "0.12.0"
imgui-glow-renderer = "0.13.0"
imgui-sdl2-support = "0.13.0"
itertools = "0.14.0"
md5 = "0.7.0"
sdl2 = { version = "0.37.0", features = ["default"] }
sdl2-sys = { version = "0.37.0", features = ["default"] }
smps = { version = "0.1.0", path = "../smps" }
speedshoes = { path = "../speedshoes" }
