[package]
name = "speedshoes"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.6.0"
dlopen2 = { version = "0.7.0", features = ["symbor"] }
itertools = "0.14.0"
libc = "0.2.164"
r68k-emu = { git = "https://github.com/foreverWIP/r68k.git" }
r68k-tools = { git = "https://github.com/foreverWIP/r68k.git" }
speedshoes-vdp-renderer = { version = "0.1.0", path = "../speedshoes-vdp-renderer" }
